--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-zef",
+  "name": "api-zeff",
   "version": "0.0.1",
   "description": "simple api using express and node.js",
   "main": "index.js",
